# caseware-procurement-kb

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/: mcp.json
docs/: take-home-summary.html
mcp_server/: server.py
scripts/: ingest.py
src/caseware_kb/: __init__.py  chunk.py  cli.py  config.py  embed.py  extract.py  matching.py  models.py  pipeline.py  retrieve.py  store.py
