[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caseware-kb"
version = "0.1.0"
description = "Local RAG pipeline and MCP server for Caseware procurement knowledge base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
caseware-ingest = "caseware_kb.cli:ingest_main"
caseware-mcp = "caseware_kb.cli:mcp_main"

[tool.setuptools.packages.find]
where = ["src"]
